--- a/manuscript.html
+++ b/manuscript.html
@@ -72,9 +72,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02b21d7c0571c8f2823a8ab06b94a5c3fab6d660/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02b21d7c0571c8f2823a8ab06b94a5c3fab6d660/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02b21d7c0571c8f2823a8ab06b94a5c3fab6d660/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/84feec3cf1947179892cb799ad1f85f67c2d3488/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/84feec3cf1947179892cb799ad1f85f67c2d3488/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/84feec3cf1947179892cb799ad1f85f67c2d3488/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -88,9 +88,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02b21d7c0571c8f2823a8ab06b94a5c3fab6d660/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/84feec3cf1947179892cb799ad1f85f67c2d3488/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/02b21d7c0571c8f2823a8ab06b94a5c3fab6d660">uiceds/cee-492-term-project-fall-2022-jakt@02b21d7</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/84feec3cf1947179892cb799ad1f85f67c2d3488">uiceds/cee-492-term-project-fall-2022-jakt@84feec3</a>
 on November 20, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -332,9 +332,11 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </p>
 <em>Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
 <p align="justify">
-__Output:__87% accuracy was obtained on the training data, with a loss of about 0.3
+<strong>Output:</strong> 87% accuracy was obtained on the training data, with a loss of about 0.3
 </p>
 <p><span class="semibold">Test metrics:</span>
+|<span class="center">Prediction Matrix</span>|<span class="center">Description</span>|
+|:——–|:————————————-|
 |Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
 |Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|</p>
@@ -343,7 +345,7 @@ __Output:__87% accuracy was obtained on the training data, with a loss of about 
 </p>
 <p><em>Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></p>
 <p align="justify">
-__Output:__68% accuracy was obtained on the training data, with a loss of about 0.7
+<strong>Output:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
 </p>
 <span class="semibold">Test metrics:</span>
 <p align="justify">
@@ -360,7 +362,7 @@ Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 a
 </p>
 <em>Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
 <p align="justify">
-__Output:__68% accuracy was obtained on the training data, with a loss of about 0.7
+<strong>Output:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
 </p>
 <span class="semibold">Test metrics:</span>
 <p align="justify">
@@ -377,14 +379,14 @@ Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 a
 </p>
 <em>Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em>
 <p align="justify">
-__Output:__65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset
+<strong>Output:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset
 </p>
 <p align="center">
 <img src="images/Figure%206.png" title="fig:" />
 </p>
 <em>Fig 6. Confusion matrix for case 3 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
 <p align="justify">
-__Output:__78% accuracy was obtained on the training data, with a loss of about 0.5
+<strong>Output:</strong> 78% accuracy was obtained on the training data, with a loss of about 0.5
 </p>
 <span class="semibold">Test metrics:</span>
 <p align="justify">
@@ -412,14 +414,6 @@ Finally, the key lesson learnt is that the developed model is as good as the dat
 <p><span class="semibold">References:</span></p>
 <p>[1] Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, <em>2022</em></p>
 <p>[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, “A deep learning approach to flight delay prediction,” <em>2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. doi:10.1109/DASC.2016.7778092</em></p>
-<p>[3] Keras sequential model, Tensorflow</p>
-<p>[4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names</p>
-<p>[5] When to Use One-Hot Encoding in Deep Learning?</p>
-<p>[6] Constructing a Multi-Class Classifier Using Neural Network with Python</p>
-<p>[7] A Gentle Introduction to the Rectified Linear Unit (ReLU)</p>
-<p>[8] A Gentle Introduction To Sigmoid Function</p>
-<p>[9] Stochastic Gradient Descent – Clearly Explained!!</p>
-<p>[10] Confusion Matrix with Sklearn</p>
 <div id="refs" class="references csl-bib-body" role="doc-bibliography">
 <div id="ref-tx7QnH2O" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">1. </div><div class="csl-right-inline"><strong>Keras documentation: The Sequential model</strong> <div class="csl-block">Keras Team</div> <a href="https://keras.io/guides/sequential_model/">https://keras.io/guides/sequential_model/</a></div>
