--- a/manuscript.html
+++ b/manuscript.html
@@ -72,9 +72,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/bf4c90edd811bde58c6a66eda72703bf77bdccbd/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/bf4c90edd811bde58c6a66eda72703bf77bdccbd/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/bf4c90edd811bde58c6a66eda72703bf77bdccbd/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f9020d9be555cff16cc6b9463ddf224b82a0c20/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f9020d9be555cff16cc6b9463ddf224b82a0c20/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f9020d9be555cff16cc6b9463ddf224b82a0c20/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -88,9 +88,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/bf4c90edd811bde58c6a66eda72703bf77bdccbd/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f9020d9be555cff16cc6b9463ddf224b82a0c20/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/bf4c90edd811bde58c6a66eda72703bf77bdccbd">uiceds/cee-492-term-project-fall-2022-jakt@bf4c90e</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/3f9020d9be555cff16cc6b9463ddf224b82a0c20">uiceds/cee-492-term-project-fall-2022-jakt@3f9020d</a>
 on November 20, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -334,12 +334,33 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 <p align="justify">
 <strong>Output:</strong> 87% accuracy was obtained on the training data, with a loss of about 0.3
 </p>
-<p><span class="semibold">Test metrics:</span>
-|[Prediction Matrix]|[Description]|
-|:———————————————–|:————————————-|
-|Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
-|Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
-|Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|</p>
+<p><span class="semibold">Test metrics:</span></p>
+<table>
+<colgroup>
+<col style="width: 55%" />
+<col style="width: 44%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">[Prediction Matrix]</th>
+<th style="text-align: left;">[Description]</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Precision</td>
+<td style="text-align: left;">0.35, 0.66, and 0.26 for short term, medium term and long term respectively</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Recall</td>
+<td style="text-align: left;">0.22, 0.72, 0.19, for short term, medium term and long term respectively</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Proportion of each class in original dataset</td>
+<td style="text-align: left;">25%, 65% and 0.1% for short term, medium term and long term respectively</td>
+</tr>
+</tbody>
+</table>
 <p align="center">
 <img src="images/Figure%203.png" title="fig:" />
 </p>
